# crypto-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Note1.ipynb  docker-compose.yml  pyproject.toml  readme.md  run_loader.py
 .github/workflows/: ci.yml
 docs/: data-contract.md
.github/workflows/: ci.yml
docs/: README.md  data-contract-ohlcv.md  vision.md
infra/init/: 001_schema.sql
notebooks/: BTC_1m_analysis.ipynb
scripts/: aggregate_btc_1m.py  download_btc_usdt_1m_3y.py
src/crypto_lab/cli/: cli_v0.py
src/crypto_lab/lab_core/aggregator/: aggregator_v0.py
src/crypto_lab/lab_core/loader/: ccxt_loader_v0.py
src/crypto_lab/lab_core/logging/: logging_v1.py
src/crypto_lab/lab_core/pipeline/: history_v1.py  pipeline_v0.py
src/crypto_lab/lab_core/qc/: dashboard_v0.py  qc_v0.py
src/io/: fetch.py  healthcheck.py  state.py  test.py  utils.py
src/io/data/raw/: autosave_binance_BTCUSDT_1h.parquet  autosave_binance_BTCUSDT_5m.parquet  binance__BTCUSDT__1h__2025-04-30__2025-10-01.parquet  binance__BTCUSDT__1h__2025-09-30__2025-10-01.parquet  binance__BTCUSDT__5m__2025-04-30__2025-10-01.json  binance__BTCUSDT__5m__2025-04-30__2025-10-01.parquet
tests/: test_aggregator_v0.py  test_normalize_to_contract.py  test_pipeline_v0.py  test_qc_dashboard_v0.py  test_qc_v0.py  test_smoke.py
