[tool.poetry]
name = "crypto-lab"
version = "0.1.0"
description = "Data pipeline & QC for OHLCV"
authors = ["Alex Lebedev <lebedevalex3@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
pyarrow = "^21.0.0"
numpy = "^2.3.3"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.11.0"
matplotlib = "^3.10.6"
jupyter = "^1.1.1"
ccxt = "^4.5.7"
loguru = "^0.7.3"
rich = "^14.1.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.3"
black = "^25.9.0"
isort = "^6.1.0"
mypy = "^1.18.2"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pre-commit = "^4.3.0"
types-python-dateutil = "^2.9.0.20250822"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B", "UP", "ANN", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
